# eopl3

./: .gitignore  00-foreword.md  01-preface.md  02-acknowledgements.md  03-ch1.md  04-ch2.md  05-ch3.md  README.md
01-preface/: ex0.1.md
03-ch1/: ex1.1.md  ex1.10.md  ex1.11.md  ex1.12.md  ex1.13.md  ex1.14.md  ex1.17.rkt  ex1.26.rkt  ex1.3.md  ex1.36.md  ex1.5.md  ex1.7.md  ex1.7.rkt  ex1.8.md  ex1.8.rkt  ex1.9.md
03-ch1/src/: Ch1.elm
04-ch2/: ex2-15.rkt  ex2-21.rkt  ex2-22.rkt  ex2.1.md  ex2.16.rkt  ex2.17b.rkt  ex2.2.md  ex2.27.md  ex2.28.rkt  ex2.29.rkt  ex2.3.md  ex2.31.rkt  ex2.5.md  ex2.6.md
04-ch2/src/: BiBintreeWrong.elm  RedBlueTree.elm
05-ch3/: ex3.14.md  ex3.2.md  ex3.21.md  ex3.22.md  ex3.24.md  ex3.25.md  ex3.30.md  ex3.32.md  ex3.40.md  ex3.6.md  ex3.9.md
05-ch3/interpreters/LETREC-3.32/: letrec.cabal
05-ch3/interpreters/LETREC-3.32/src/Letrec/: Interpreter.hs
05-ch3/interpreters/PROC-3.27/: proc.cabal
05-ch3/interpreters/PROC-3.27/tests/Test/: Interpreter.hs
06-ch4/: ex4.1.md  ex4.14.md  ex4.4.md  ex4.5.md
06-ch4/interpreters/EXPLICIT-REFS/: explicit-refs.cabal
06-ch4/interpreters/EXPLICIT-REFS/src/ExplicitRefs/: AST.hs  Interpreter.hs  Parser.hs
06-ch4/interpreters/EXPLICIT-REFS/tests/Test/: Interpreter.hs
06-ch4/interpreters/IMPLICIT-REFS/: implicit-refs.cabal
06-ch4/interpreters/IMPLICIT-REFS/src/ImplicitRefs/: AST.hs  Env.hs  Interpreter.hs  Parser.hs
06-ch4/interpreters/IMPLICIT-REFS/tests/Test/: Interpreter.hs
ch3/LETREC-3.35/: env.rkt  interpreter.rkt
ch3/LETREC-3.36/: env.rkt  parser.rkt
ch3/NAMELESS-PROC/: env.rkt  env.test.rkt  interpreter.rkt  parser.rkt  translator.test.rkt
ch3/NAMELESS-PROC-3.39/: interpreter.rkt  interpreter.test.rkt  parser.rkt  parser.test.rkt  translator.rkt  translator.test.rkt
ch3/NAMELESS-PROC-3.40/: nenv.rkt  nenv.test.rkt  parser.rkt  senv.rkt  senv.test.rkt  translator.rkt
ch3/NAMELESS-PROC-3.41/: interpreter.test.rkt  nenv.test.rkt
ch3/PROC/: interpreter.test.rkt
ch3/PROC-3.28/: interpreter.test.rkt  parser.test.rkt
ch4/CALL-BY-NAME/: interpreter.test.rkt
ch4/CALL-BY-NEED/: interpreter.rkt  interpreter.test.rkt
ch4/CALL-BY-NEED-4.40/: interpreter.test.rkt  parser.rkt
ch4/CALL-BY-NEED-4.42/: interpreter.rkt
ch4/CALL-BY-REFERENCE/: interpreter.test.rkt
ch4/CALL-BY-REFERENCE-4.32/: env.rkt  interpreter.rkt  parser.test.rkt
ch4/CALL-BY-REFERENCE-4.33/: interpreter.rkt  parser.rkt
ch4/CALL-BY-REFERENCE-4.34/: parser.test.rkt
ch4/CALL-BY-REFERENCE-4.36/: interpreter.rkt  interpreter.test.rkt  parser.rkt
ch4/EXPLICIT-REFS/: env.rkt  interpreter.rkt  interpreter.test.rkt  parser.test.rkt
ch4/EXPLICIT-REFS-4.11/: interpreter.rkt  interpreter.test.rkt  parser.rkt  parser.test.rkt
ch4/EXPLICIT-REFS-4.12/: interpreter.rkt  parser.rkt
ch4/EXPLICIT-REFS-4.13/: interpreter.rkt  parser.rkt  store.rkt
ch4/IMPLICIT-REFS-4.17/: env.rkt  interpreter.rkt  interpreter.test.rkt
ch4/IMPLICIT-REFS-4.19/: interpreter.rkt
ch4/IMPLICIT-REFS-4.20/: interpreter.test.rkt
ch4/IMPLICIT-REFS-4.21/: env.rkt  interpreter.test.rkt
ch4/IMPLICIT-REFS-4.35/: interpreter.test.rkt
ch4/MUTABLE-PAIRS/: interpreter.test.rkt  mutpair.rkt  parser.rkt
ch4/MUTABLE-PAIRS-4.29/: interpreter.rkt  interpreter.test.rkt
ch4/MUTABLE-PAIRS-4.30/: array.rkt  interpreter.rkt  interpreter.test.rkt  parser.test.rkt
ch4/MUTABLE-PAIRS-ALT/: interpreter.rkt  mutpair.rkt  parser.test.rkt
ch4/STATEMENTS-4.23/: input.rkt  interpreter.test.rkt  parser.test.rkt  screen.rkt  screen.test.rkt
ch4/STATEMENTS-4.24/: interpreter.rkt
ch5/CONTINUATION-PASSING/: interpreter.rkt  parser.test.rkt
ch5/CONTINUATION-PASSING-5.2/: interpreter.rkt
ch5/CONTINUATION-PASSING-5.3/: interpreter.rkt  interpreter.test.rkt  parser.rkt  parser.test.rkt
ch5/CONTINUATION-PASSING-5.4/: interpreter.rkt  interpreter.test.rkt  parser.rkt
ch5/CONTINUATION-PASSING-5.5/: interpreter.rkt  interpreter.test.rkt  parser.test.rkt
ch5/CONTINUATION-PASSING-5.6/: interpreter.test.rkt  parser.rkt
ch5/CONTINUATION-PASSING-5.7/: interpreter.rkt  parser.test.rkt
ch5/CONTINUATION-PASSING-5.8/: env.rkt  interpreter.rkt  parser.rkt
ch5/CONTINUATION-PASSING-5.8-DS/: interpreter.rkt
ch5/EXCEPTIONS-5.35/: interpreter.rkt
notes/: 00-back-cover.md  01-foreword.md  02-preface.md  03-acknowledgements.md  04-ch1.md  05-ch2.md  06-ch3.md
solutions/03-ch3/interpreters/haskell/NAMELESS/: nameless.cabal
solutions/03-ch3/interpreters/haskell/NAMELESS/src/Nameless/: Translator.hs
solutions/03-ch3/interpreters/haskell/NAMELESS/src/Nameless/AST/: Nameless.hs
solutions/03-ch3/interpreters/haskell/NAMELESS/tests/Test/: Interpreter.hs
solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/: continuation-passing.cabal  grammar.ebnf
solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/src/: AST.hs  CPSInterpreter.hs  Env.hs  Interpreter.hs  Lexer.hs  Parser.hs  Store.hs
solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/tests/Test/: CPSInterpreterSpec.hs  InterpreterSpec.hs  ParserSpec.hs
solutions/05-ch5/interpreters/haskell/EXCEPTIONS/: exceptions.cabal
solutions/05-ch5/interpreters/haskell/EXCEPTIONS/src/: AST.hs  Parser.hs
solutions/05-ch5/interpreters/haskell/EXCEPTIONS/tests/Test/: CPSInterpreterSpec.hs  ParserSpec.hs
solutions/05-ch5/interpreters/haskell/MUTEX/: mutex.cabal
solutions/05-ch5/interpreters/haskell/MUTEX/src/: AST.hs  Examples.hs  Interpreter.hs  Lexer.hs  Mutex.hs  Parser.hs  Scheduler.hs  Thread.hs
solutions/05-ch5/interpreters/haskell/MUTEX/tests/Test/: ParserSpec.hs
solutions/05-ch5/interpreters/haskell/THREADS/: grammar.ebnf  threads.cabal
solutions/05-ch5/interpreters/haskell/THREADS/src/: AST.hs  Examples.hs  Interpreter.hs  Lexer.hs  Parser.hs  Queue.hs
solutions/05-ch5/interpreters/haskell/THREADS/tests/Test/: InterpreterSpec.hs  ParserSpec.hs
solutions/06-ch6/factorial/: factorial.cabal
solutions/06-ch6/factorial/src/: Factorial.hs
solutions/06-ch6/factorial/src/Factorial/: CPSDataStructure.hs  CPSProcedural.hs  Iterative.hs  Registerized.hs
(+774 files in other folders)
