name: letrec
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Letrec.Interpreter

  other-modules:
    Letrec.AST
    Letrec.Env
    Letrec.Parser

  build-depends:
    base >= 4.7 && < 5,
    parsec

  default-language: Haskell2010

test-suite letrec-tests
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    letrec

  default-language: Haskell2010
