name: proc
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Proc.Interpreter

  other-modules:
    Proc.AST
    Proc.Env
    Proc.Parser

  build-depends:
    base >= 4.7 && < 5,
    mtl,
    parsec

  default-language: Haskell2010

test-suite proc-tests
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    proc

  default-language: Haskell2010
