name: explicit-refs
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    ExplicitRefs.Interpreter

  other-modules:
    ExplicitRefs.AST
    ExplicitRefs.Env
    ExplicitRefs.Parser

  build-depends:
    base >= 4.7 && < 5,
    parsec

  default-language: Haskell2010

test-suite explicit-refs-tests
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    explicit-refs

  default-language: Haskell2010
