name: implicit-refs
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    ImplicitRefs.Interpreter

  other-modules:
    ImplicitRefs.AST
    ImplicitRefs.Env
    ImplicitRefs.Parser
    ImplicitRefs.Store

  build-depends:
    base >= 4.7 && < 5,
    parsec

  default-language: Haskell2010

test-suite implicit-refs-tests
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    implicit-refs

  default-language: Haskell2010
