cabal-version: 2.4

name: factorial
version: 0.1


library
  default-language: Haskell2010
  hs-source-dirs: src

  exposed-modules:
    Factorial.CPSDataStructure
    Factorial.CPSProcedural
    Factorial.Iterative
    Factorial.Registerized
    Factorial

  ghc-options:
    -Wall

  build-depends:
    base


test-suite tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  ghc-options:
    -Wall

  build-depends:
    base,
    hspec,
    factorial
