name: nameless
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Nameless.Interpreter

  other-modules:
    Nameless.AST.AST
    Nameless.AST.Nameless
    Nameless.Env.Nameless
    Nameless.Env.Static
    Nameless.Parser
    Nameless.Translator

  build-depends:
    base >= 4.7 && < 5,
    parsec

  default-language: Haskell2010

test-suite nameless-tests
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Test.Interpreter

  build-depends:
    base >= 4.7 && < 5,
    hspec,
    nameless

  default-language: Haskell2010
