cabal-version: 2.4

name: exceptions
version: 0.1


library
  default-language: Haskell2010
  hs-source-dirs: src

  ghc-options:
    -Wall

  build-depends:
    base,
    parsec

  exposed-modules:
    AST
    Env
    Interpreter
    Lexer
    Parser


test-suite tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  ghc-options:
    -Wall

  build-depends:
    base,
    exceptions,
    hspec,
    parsec

  other-modules:
    Test.InterpreterSpec
    Test.LexerSpec
    Test.ParserSpec
