cabal-version: 2.4

name: threads
version: 0.1


library
  default-language: Haskell2010
  hs-source-dirs: src

  ghc-options:
    -Wall

  build-depends:
    base,
    parsec

  exposed-modules:
    AST
    Env
    Interpreter
    Lexer
    Parser
    Queue
    Scheduler
    Store
    Thread


test-suite tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  ghc-options:
    -Wall

  build-depends:
    base,
    hspec,
    parsec,
    threads

  other-modules:
    Test.InterpreterSpec
    Test.LexerSpec
    Test.ParserSpec
    Test.QueueSpec
    Test.StoreSpec
